--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,7 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:support-v4:25.3.1'
+
+    compile 'com.willowtreeapps.spruce:spruce-android:1.0.1'
     testCompile 'junit:junit:4.12'
 }
